new login and signup linked  Changes to be committed: 	modified:   Home/Pages/login.html 	modified:   Home/Pages/signup.html 	deleted:    Home/css/global.css 	deleted:    Home/css/index.css 	modified:   Home/css/login.css 	new file:   Home/css/signup.css

--- a/Home/Pages/login.html
+++ b/Home/Pages/login.html
@@ -1,48 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <link rel="stylesheet" href="../css/global.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/login.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Open Sans:wght@600;700&display=swap"
-    />
+    <title>Log in</title>
   </head>
   <body>
-    <div class="login">
-      <div class="nab-bar1">
-        <div class="nab-bar-inner"></div>
-        <div class="soukauto1">
-          <span>Souk</span><span class="auto1">Auto</span>
-        </div>
-        <div class="logging-in">Logging in...</div>
-        <div class="nab-bar-child1"></div>
+    <header>
+      <div class="logo">
+        <p class="Souk">Souk</p>
+        <p class="Auto">Auto</p>
       </div>
-      <div class="log-in-now">Log in now to discover more</div>
-      <div class="vector-parent2">
-        <form method="POST" action="user_login.php">
-          <label class="e-mail5" for="email">Email Address:</label
-          ><input type="email" name="email" id="email" required />
-          <label class="e-mail5">Password</label
-          ><input type="password" name="password" id="password" required />
-          <input class="log-in" type="submit" value="Login" />
+      <p class="Loggin">Logging in...</p>
+    </header>
+    <section class="main">
+      <h1>Welcome to SoukAuto!</h1>
+      <h2>Your Platform for Buying (Selling) & Renting cars in Algeria.</h2>
+      <h3>Log in now to discover more</h3>
+      <div class="info">
+        <form action="">
+          <div>
+            <input type="email" name="" id="" placeholder="Email" required />
+          </div>
+          <div>
+            <input type="password" placeholder="Password" required />
+          </div>
+          <div>
+            <input type="submit" class="log" value="Login" />
+          </div>
         </form>
       </div>
-      <b class="welcome-to-soukauto-container"
-        ><p class="welcome-to-soukauto">Welcome To SoukAuto!</p>
-        <p class="your-platform-for">
-          Your platform for buying & selling (renting) cars in Algeria.
-        </p></b
-      >
-      <div class="vector-parent3"></div>
-      <div class="if-you-dont">If you don’t have an account?</div>
-      <div class="create-account1">Create account</div>
-    </div>
+      <p>If you don't have an account?</p>
+      <a href="">Create account</a>
+    </section>
   </body>
 </html>
