--- a/Home/Pages/signup.html
+++ b/Home/Pages/signup.html
@@ -1,67 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <link rel="stylesheet" href="../css/global.css" />
-    <link rel="stylesheet" href="../css/index.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Open Sans:wght@600;700&display=swap"
-    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/signup.css" />
+    <title>Sign up</title>
   </head>
   <body>
-    <div class="signup">
-      <div class="nab-bar">
-        <div class="nab-bar-child"></div>
-        <div class="soukauto">
-          <span>Souk</span><span class="auto">Auto</span>
-        </div>
-        <div class="signing-up">Signing up...</div>
-        <div class="nab-bar-item"></div>
+    <header>
+      <div class="logo">
+        <p class="Souk">Souk</p>
+        <p class="Auto">Auto</p>
       </div>
-      <div class="please-create-your">Please create your account</div>
-      <div class="vector-parent">
-        <img class="instance-child" alt="" src="./public/rectangle-15.svg" />
-        <div class="e-mail">Name</div>
-      </div>
-      <div class="vector-group">
-        <img class="instance-child" alt="" src="./public/rectangle-15.svg" />
-        <div class="e-mail">E-mail</div>
-      </div>
-      <div class="vector-container">
-        <img class="instance-child" alt="" src="./public/rectangle-15.svg" />
-        <div class="e-mail">Password</div>
-      </div>
-      <div class="rectangle-div">
-        <img class="instance-child" alt="" src="./public/rectangle-15.svg" />
-        <div class="e-mail">Wilaya</div>
-      </div>
-      <div class="vector-parent1">
-        <img class="instance-child" alt="" src="./public/rectangle-15.svg" />
-        <div class="e-mail">Phone number</div>
-      </div>
-      <div class="by-clicking-create-container">
-        <p class="by-clicking-create">By clicking “create account” I agree</p>
-        <p class="by-clicking-create">to Icar’s TOS & Privacy Policy</p>
-      </div>
-      <div class="signup-inner">
-        <div class="group-wrapper">
-          <div class="group-wrapper">
-            <div class="group-child"></div>
-            <div class="create-account">Create account</div>
+      <p class="Loggin">Signing up...</p>
+    </header>
+    <section class="main">
+      <h1>Please create your account</h1>
+
+      <div class="info">
+        <form action="">
+          <div>
+            <input type="text" name="" id="" placeholder="Name" required />
           </div>
-        </div>
+          <div>
+            <input type="email" placeholder="E-mail" required />
+          </div>
+          <div>
+            <input
+              type="password"
+              name=""
+              id=""
+              placeholder="Password"
+              required
+            />
+          </div>
+          <div>
+            <input type="text" placeholder="Wilaya" required />
+          </div>
+          <div>
+            <input
+              type="text"
+              name=""
+              id=""
+              placeholder="Phone number"
+              required
+            />
+          </div>
+          <p>
+            By clicking "create account" i agree to SoukAuto TOS & Privacy
+            Policy.
+          </p>
+          <div>
+            <input type="submit" class="sign" value="Create account" />
+          </div>
+        </form>
       </div>
-      <img
-        class="unsplashsoervmdvmh8-icon"
-        alt=""
-        src="./public/unsplashsoervmdvmh8@2x.png"
-      />
-    </div>
+    </section>
   </body>
 </html>
