--- a/Home/Pages/login.html
+++ b/Home/Pages/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/login.css" />
     <title>Log in</title>
   </head>
+
   <body>
     <header>
       <div class="logo">
@@ -19,13 +20,16 @@
       <h1>Welcome to SoukAuto!</h1>
       <h2>Your Platform for Buying (Selling) & Renting cars in Algeria.</h2>
       <h3>Log in now to discover more</h3>
+
       <div class="info">
-        <form action="">
+        <form method="POST" action="../utility/user_login.php">
           <div>
-            <input type="email" name="" id="" placeholder="Email" required />
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" required />
           </div>
           <div>
-            <input type="password" placeholder="Password" required />
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password" required />
           </div>
           <div>
             <input type="submit" class="log" value="Login" />
@@ -33,7 +37,8 @@
         </form>
       </div>
       <p>If you don't have an account?</p>
-      <a href="">Create account</a>
+      <br />
+      <a href="signup.html">Create account</a>
     </section>
   </body>
 </html>
