--- a/templ/startbootstrap-shop-homepage-gh-pages/index.html
+++ b/templ/startbootstrap-shop-homepage-gh-pages/index.html
@@ -66,7 +66,7 @@
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Product name-->
+                                    <!-- Product details-->
                                     <h5 class="fw-bolder">Special Item</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
@@ -97,7 +97,7 @@
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Product name-->
+                                    <!-- Product details-->
                                     <h5 class="fw-bolder">Sale Item</h5>
                                     <!-- Product price-->
                                     <span class="text-muted text-decoration-line-through">$50.00</span>
