--- a/Pages/all_posts.html
+++ b/Pages/all_posts.html
@@ -58,7 +58,7 @@
                             </ul>
                         </li>
                     </ul> -->
-                    <form class="d-flex">
+                    <form class="d-flex ms-auto">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             favorites
@@ -82,95 +82,107 @@
         <!--Filter nav-->
         <div class="container">
             <div class="row">
-              <div class="col-md-12">
-
-                <!-- Filter Toggle Button -->
-                <div class="d-flex justify-content my-3 ml-3">
-                  <button type="button" class="btn btn-outline-primary toggle-filter-btn">
-                    <ion-icon name="funnel-outline"></ion-icon>
-                  </button>
+                <div class="col-md-12 d-flex justify-content-between">
+                    <!-- Toggle Button -->
+                    <div class="d-flex justify-content my-3">
+                        <button type="button" class="btn btn-outline-primary toggle-filter-btn">
+                            <ion-icon name="funnel-outline"></ion-icon>
+                        </button>
+                    </div>
+                
+                    <!-- Search Bar -->
+                    <div class="bg-white p-3 rounded ml-auto">
+                        <div class="input-group">
+                            <input type="search" placeholder="Search" aria-describedby="button-addon1" class="form-control border-0 bg-light">
+                            <div class="input-group-append">
+                                <button id="button-addon1" type="submit" class="btn btn-link text-primary"><ion-icon name="search-outline"></ion-icon></button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
                 <!-- Filter Form -->
-                <form class="filter-form d-none">
-                    <div class="row">
-                        <div class="col-md-4 mb-3">
-                            <!-- Brand -->
-                            <label for="brand">Brand:</label>
-                            <select class="form-control" id="brand">
-                                <option>Toyota</option>
-                                <option>Honda</option>
-                                <option>Nissan</option>
-                                <option>Hyundai</option>
-                                <option>Kia</option>
-                            </select>
-                        </div>
-                        <div class="col-md-4 mb-3">
-                            <!-- Wilaya -->
-                            <label for="wilaya">Wilaya:</label>
-                            <select class="form-control" id="wilaya">
-                                <option>Algiers</option>
-                                <option>Oran</option>
-                                <option>Constantine</option>
-                                <option>Batna</option>
-                                <option>Setif</option>
-                            </select>
-                        </div>
-                        <div class="col-md-4 mb-3">
-                            <!-- Country -->
-                            <label for="country">Country:</label>
-                            <select class="form-control" id="country">
-                                <option>Japan</option>
-                                <option>Korea</option>
-                                <option>Germany</option>
-                                <option>USA</option>
-                                <option>France</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <!-- Price range -->
-                        <div class="col-md-4 mb-3">
-                            <label for="price ">Price:</label>
-                            <input type="range" class="form-range" id="price" step="100000"  min="1000000" max="10000000">
-                            <div class="price-range-values"></div>
-                            <div class="d-flex justify-content-between">
-                                <span>1,000,000</span>
-                                <span>10,000,000</span>
+                <div class="row">
+                    <div class="col-md-12">
+                        <form class="filter-form d-none">
+                            <div class="row">
+                                <div class="col-md-4 mb-3">
+                                    <!-- Brand -->
+                                    <label for="brand">Brand:</label>
+                                    <select class="form-control" id="brand">
+                                        <option>Toyota</option>
+                                        <option>Honda</option>
+                                        <option>Nissan</option>
+                                        <option>Hyundai</option>
+                                        <option>Kia</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-4 mb-3">
+                                    <!-- Wilaya -->
+                                    <label for="wilaya">Wilaya:</label>
+                                    <select class="form-control" id="wilaya">
+                                        <option>Algiers</option>
+                                        <option>Oran</option>
+                                        <option>Constantine</option>
+                                        <option>Batna</option>
+                                        <option>Setif</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-4 mb-3">
+                                    <!-- Country -->
+                                    <label for="country">Country:</label>
+                                    <select class="form-control" id="country">
+                                        <option>Japan</option>
+                                        <option>Korea</option>
+                                        <option>Germany</option>
+                                        <option>USA</option>
+                                        <option>France</option>
+                                    </select>
+                                </div>
                             </div>
-                            <input type="range" class="form-range" id="price2" step="100000"  min="1000000" max="10000000">
-                        </div>
-                        <!-- Mileage Range -->
-                        <div class="col-md-4 mb-3">
-                            <label for="mileage">Mileage:</label>
-                            <input type="range" class="form-range" id="mileage" step="5000" min="0" max="500000">
-                            <div class="d-flex justify-content-between">
-                                <span>0</span>
-                                <span>500,000</span>
+                            <div class="row">
+                                <!-- Price range -->
+                                <div class="col-md-4 mb-3">
+                                    <label for="price ">Price:</label>
+                                    <input type="range" class="form-range" id="price" step="100000"  min="1000000" max="10000000">
+                                    <div class="price-range-values"></div>
+                                    <div class="d-flex justify-content-between">
+                                        <span>1,000,000</span>
+                                        <span>10,000,000</span>
+                                    </div>
+                                    <input type="range" class="form-range" id="price2" step="100000"  min="1000000" max="10000000">
+                                </div>
+                                <!-- Mileage Range -->
+                                <div class="col-md-4 mb-3">
+                                    <label for="mileage">Mileage:</label>
+                                    <input type="range" class="form-range" id="mileage" step="5000" min="0" max="500000">
+                                    <div class="d-flex justify-content-between">
+                                        <span>0</span>
+                                        <span>500,000</span>
+                                    </div>
+                                    <input type="range" class="form-range" id="mileage2" step="5000" min="0" max="500000">
+                                </div>
+                                <!-- year Range -->
+                                <div class="col-md-4 mb-3">
+                                    <label for="year">Year:</label>
+                                    <input type="text" class="form-control datepicker-year" class="year" name="year" placeholder="From" min="1970" max="2023">
+                                    <br>
+                                    <input type="text" class="form-control datepicker-year" class="year" name="year" placeholder="To" min="1970" max="2023">
+                                </div>
                             </div>
-                            <input type="range" class="form-range" id="mileage2" step="5000" min="0" max="500000">
-                        </div>
-                        <!-- year Range -->
-                        <div class="col-md-4 mb-3">
-                            <label for="year">Year:</label>
-                            <input type="text" class="form-control datepicker-year" class="year" name="year" placeholder="From" min="1970" max="2023">
-                            <br>
-                            <input type="text" class="form-control datepicker-year" class="year" name="year" placeholder="To" min="1970" max="2023">
-                        </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary">Filter</button>
+                            </div>
+                        </form>
                     </div>
-                  <div class="text-center">
-                    <button type="submit" class="btn btn-primary">Filter</button>
-                  </div>
-                </form>
-              </div>
+                </div>
             </div>
-          </div>
+        </div>
 
         <!--shopping part-->
         <div class="container cards_landscape_wrap-2 pb-5">
             <div class="row">
                 <!--prod 1-->
-                <div class="col-md-6 col-lg-3">
+                <div class="col-md-6 col-lg-4">
                     <div class="container">
                         <div class="card mb-4"> 
                             <!-- RENT/SELL badge-->
