post pages updated

--- a/admin.html
+++ b/admin.html
@@ -46,7 +46,9 @@
       line-height: 68px;
       font-weight: 700;
       padding-bottom: 20px;
-      display: block;
+      display: flex;
+    justify-content: center;
+    align-items: center;
     }
   </style>
   <title>Your Admin Dashboard</title>
